...
        app:contentInsetStart="72dp"
        android:background="@color/colorPrimary"
        app:layout_collapseMode="pin"
        app:navigationIcon="@drawable/left_arrow">

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            style="@style/Widget.Design.TabLayout"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:tabSelectedTextColor="#FFF" />

    </android.support.v7.widget.Toolbar>


    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
        android:id="@+id/simple_exo_player"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_marginTop="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
...
